--- a/final_proj/poo.html
+++ b/final_proj/poo.html
@@ -12,13 +12,13 @@
 <link rel="icon" 
       type="image/png" 
       href="http://68.media.tumblr.com/avatar_bad9d704902f_128.png">
-<audio volume = ".5" id = 'x' autoplay>
+<audio volume =".1" id = 'x' autoplay>
 	<source src = "x.mp3" type = "audio/mpeg">
 </audio>
 
 <style>
 body{
-	background-image:url(http://i.imgur.com/4vTmqKo.gif);
+	background-image:url(poo.gif);
 	background-color:black;
 	background-size:100% 100%;
 	background-repeat:no-repeat;
